--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
                     <span class="quotes quotes-first">"</span>
                     <span class="text">Data analysts: because Excel won't analyze itself.</span>
                     <span class="quotes quotes-second">"</span>
+                    <span class="text">ChatGPT</span>
                 </p>
 
                 <div class="bottom-text">
                     <p class="medium-text">
-                        <span>Why guess when you can know?</span>
-                        <span>Hire me, and I'll make sure your data gives you all the answers - no crystal ball required.</span>
+                        <span>"Why guess when you can know?</span>
+                        <span>Hire me, and I'll make sure your data gives you all the answers - no crystal ball required."</span>
+                        <span>Me</span>
                     </p>
                 </div>                
             </div>
@@ -86,67 +88,67 @@
                 <ul class="list">
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/SQL.png" alt="">
+                            <img src="./images/SQL2.png" alt="">
                         </div>
                         <span class="text">SQL</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/MySQL.png" alt="">
+                            <img src="./images/MySQL2.png" alt="">
                         </div>                        
                         <span class="text">MySQL</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/Tableau.png" alt="">
+                            <img src="./images/Tableau2.png" alt="">
                         </div>                        
                         <span class="text">Tableau</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/Excel.png" alt="">
+                            <img src="./images/Excel2.png" alt="">
                         </div>                        
                         <span class="text">Excel</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/python.png" alt="">
+                            <img src="./images/python2.png" alt="">
                         </div>                        
                         <span class="text">Python</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/HTML.png" alt="">
+                            <img src="./images/HTML2.png" alt="">
                         </div>                        
                         <span class="text">HTML</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/CSS.png" alt="">
+                            <img src="./images/CSS2.png" alt="">
                         </div>                        
                         <span class="text">CSS</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/javascrip.png" alt="">
+                            <img src="./images/javascrip2.png" alt="">
                         </div>                        
                         <span class="text">JavaScript</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/jira.png" alt="">
+                            <img src="./images/jira2.png" alt="">
                         </div>                        
                         <span class="text">Jira</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/photoshop.png" alt="">
+                            <img src="./images/photoshop2.png" alt="">
                         </div>                        
                         <span class="text">Photoshop</span>
                     </li>
                     <li class="item">
                         <div class="img-wrap">
-                            <img src="./images/illustrator.png" alt="">
+                            <img src="./images/illustrator2.png" alt="">
                         </div>                        
                         <span class="text">Illustrator</span>
                     </li>
