--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <div class="img-wrap">
                             <img src="" alt="">                            
                         </div>
-                        <span class="button">View the project</span>
+                        <span class="button" data-id="3">View the project</span>
                     </li>
                     <li class="item">
                         <h2 class="subtitle">Name of the project</h2>
@@ -208,11 +208,24 @@
                     <span class="close-button">X</span>
                     <script src="https://gist.github.com/NemanjaDjordan/afd8edc0560fb3bf32fa157b370178b3.js"></script>
                 </li>
+                <li class="item" data-id="3">
+                    <span class="close-button">X</span>
+                    <div class='tableauPlaceholder' id='viz1724658824345' style='position: relative'><noscript><a href='https:&#47;&#47;www.tableau.com&#47;foundation'><img alt='At a glance ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;TableauFoundationLivingReport&#47;Ataglance&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='TableauFoundationLivingReport&#47;Ataglance' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;TableauFoundationLivingReport&#47;Ataglance&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1724658824345');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1200px';vizElement.style.height='900px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+                </li>
             </ul>
         </section>
     </main>
 
-    <footer class="footer" data-name="contact"></footer>
+    <footer class="footer" data-name="contact">
+        <div class="wrapper">
+            <div class="footer-links">
+                <a href="https://www.linkedin.com/in/nemanja-%C4%91ordan/" target="_blank" class="footer-link">LinkedIn</a>
+                <a href="tel:+381669301851" class="footer-link">Phone: +381 66 930 1851</a>
+                <a href="mailto:djordan.nemanja@gmail.com" class="footer-link">Email: djordan.nemanja@gmail.com</a>
+            </div>
+            <p class="footer-text">© 2024 Nemanja Đordan. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="./js/app.js"></script>
 </body>
