--- a/index.html
+++ b/index.html
@@ -194,41 +194,49 @@
                             <div class="img-wrap">
                                 <img src="./images/portfolio-3.png" alt>
                             </div>
-                            <span class="button" data-id="3">View the
-                                project</span>
+                            <span class="button">
+                                <a href="https://public.tableau.com/views/NetflixMoviesTVseriesData/Netflix?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View the project</a>
+                            </span>
                         </li>
                         <li class="item">
-                            <h2 class="subtitle">Name of the project</h2>
-                            <p class="text">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Corrupti dolores,
-                                culpa numquam odio quasi unde itaque. Dolores
-                                tempore eos voluptates!</p>
+                            <h2 class="subtitle">Sales Dashboard</h2>
+                            <p class="text">This Tableau dashboard provides an insightful overview of key business metrics, including overall profit, sales, and units sold. It highlights monthly profit trends, customer-driven sales, and the distribution of product sales across different countries. Additionally, it offers a clear view of how various products perform in terms of units sold, enabling data-driven decision-making.</p>
                             <div class="img-wrap">
-                                <img src alt>
+                                <img src="./images/portfolio-4.png" alt>
                             </div>
-                            <span class="button">View the project</span>
+                            <span class="button">
+                                <a href="https://public.tableau.com/views/SalesDashboard_17249630300410/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View the project</a>
+                            </span>
                         </li>
                         <li class="item">
-                            <h2 class="subtitle">Name of the project</h2>
-                            <p class="text">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Corrupti dolores,
-                                culpa numquam odio quasi unde itaque. Dolores
-                                tempore eos voluptates!</p>
+                            <h2 class="subtitle">Anime 2023</h2>
+                            <p class="text">The Tableau dashboard on anime up to the year 2023 provides an in-depth analysis of various aspects of anime titles. It covers key details such as the anime's name in different languages, its score, genres, and a brief synopsis. The dashboard also highlights important information like the number of episodes, premiere dates, and airing status. Additional insights include data on production studios, licensors, and source material, as well as audience engagement metrics like popularity, favorites, and user scores. This comprehensive dashboard offers a clear view of the anime landscape across different dimensions.</p>
                             <div class="img-wrap">
-                                <img src alt>
+                                <img src="./images/portfolio-5.png" alt>
                             </div>
-                            <span class="button">View the project</span>
+                            <span class="button">
+                                <a href="https://public.tableau.com/views/Anime_17259514384160/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View the project</a>
+                            </span>
                         </li>
                         <li class="item">
-                            <h2 class="subtitle">Name of the project</h2>
-                            <p class="text">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Corrupti dolores,
-                                culpa numquam odio quasi unde itaque. Dolores
-                                tempore eos voluptates!</p>
+                            <h2 class="subtitle">Earthquakes 1900-2013</h2>
+                            <p class="text">This Tableau dashboard is about earthquakes from 1900 to 2013, and provides an in-depth visualization of seismic events over this period.</p>
                             <div class="img-wrap">
-                                <img src alt>
+                                <img src="./images/portfolio-6.png" alt>
                             </div>
-                            <span class="button">View the project</span>
+                            <span class="button">
+                                <a href="https://public.tableau.com/views/Earthquakes1900-2013_17260618611590/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View the project</a>
+                            </span>
+                        </li>
+                        <li class="item">
+                            <h2 class="subtitle">McDonald’s Menu</h2>
+                            <p class="text">The Tableau dashboard provides a detailed analysis of McDonald's menu items, focusing on their nutritional content. This visual representation helps users better understand the nutritional breakdown of McDonald's offerings.</p>
+                            <div class="img-wrap">
+                                <img src="./images/portfolio-7.png" alt>
+                            </div>
+                            <span class="button">
+                                <a href="https://public.tableau.com/views/McDonaldsMenu_17261708522460/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View the project</a>
+                            </span>
                         </li>
                     </ul>
                 </div>
@@ -243,10 +251,6 @@
                         <script
                             src="https://gist.github.com/NemanjaDjordan/afd8edc0560fb3bf32fa157b370178b3.js"></script>
                     </li>
-                    <li class="item" data-id="3">
-                        <span class="close-button">X</span>
-                        <div class='tableauPlaceholder' id='viz1724952076367' style='position: relative'><noscript><a href='#'><img alt='Netflix ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ne&#47;NetflixMoviesTVseriesData&#47;Netflix&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='NetflixMoviesTVseriesData&#47;Netflix' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ne&#47;NetflixMoviesTVseriesData&#47;Netflix&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1724952076367');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.maxWidth='1700px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';vizElement.style.maxHeight='927px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.maxWidth='1700px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';vizElement.style.maxHeight='927px';} else { vizElement.style.width='100%';vizElement.style.height='2327px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-                    </li>
                 </ul>
             </section>
         </main>
@@ -255,7 +259,7 @@
             <div class="wrapper">
                 <div class="footer-links">
                     <a href="https://www.linkedin.com/in/nemanja-%C4%91ordan/"
-                        target="_blank" class="footer-link">LinkedIn</a>
+                        target="_blank" class="footer-link">LinkedIn: Nemanja Đordan</a>
                     <a href="tel:+381669301851" class="footer-link">Phone: +381
                         66 930 1851</a>
                     <a href="mailto:djordan.nemanja@gmail.com"
