--- a/index.html
+++ b/index.html
@@ -157,38 +157,6 @@
                     <h1 class="h1">Portfolio</h1>
                     <ul class="list">
                         <li class="item">
-                            <h2 class="subtitle">Data Cleaning and Feature
-                                Engineering for Titanic Dataset</h2>
-                            <p class="text">This script loads the Titanic
-                                dataset, cleans it by handling missing values,
-                                removing duplicates, and converting data types.
-                                It also creates a new 'FamilySize' feature.
-                                Finally, it saves the cleaned data to a CSV file
-                                for further analysis.</p>
-                            <div class="img-wrap">
-                                <img src="./images/portfolio-1.png" alt>
-                            </div>
-                            <span class="button" data-id="1">View the
-                                project</span>
-                        </li>
-                        <li class="item">
-                            <h2 class="subtitle">Visualizing Sales and Profit
-                                Data from Excel Using Pandas and Seaborn</h2>
-                            <p class="text">The code loads an Excel file into a
-                                pandas DataFrame and uses Seaborn to create
-                                various visualizations, including sales by
-                                segment and country, customer sales, monthly
-                                profit, units sold by segment, and top-selling
-                                products. Each plot is customized with titles,
-                                labels, and color palettes for clear
-                                presentation.</p>
-                            <div class="img-wrap">
-                                <img src="./images/portfolio-2.png" alt>
-                            </div>
-                            <span class="button" data-id="2">View the
-                                project</span>
-                        </li>
-                        <li class="item">
                             <h2 class="subtitle">Netflix Movies & TV Series</h2>
                             <p class="text">This Tableau dashboard provides a comprehensive overview of Netflix's content library, exploring key aspects such as ratings, release dates, and genre distribution. It visualizes the distribution of movies and TV shows across different countries and tracks how the volume of content has evolved over the years. Additionally, the dashboard highlights the top genres available on the platform, offering valuable insights into Netflix's global content trends.</p>
                             <div class="img-wrap">
@@ -229,7 +197,7 @@
                             </span>
                         </li>
                         <li class="item">
-                            <h2 class="subtitle">McDonald’s Menu</h2>
+                            <h2 class="subtitle">McDonald's Menu</h2>
                             <p class="text">The Tableau dashboard provides a detailed analysis of McDonald's menu items, focusing on their nutritional content. This visual representation helps users better understand the nutritional breakdown of McDonald's offerings.</p>
                             <div class="img-wrap">
                                 <img src="./images/portfolio-7.png" alt>
@@ -240,18 +208,6 @@
                         </li>
                     </ul>
                 </div>
-                <ul class="raw-files">
-                    <li class="item" data-id="1">
-                        <span class="close-button">X</span>
-                        <script
-                            src="https://gist.github.com/NemanjaDjordan/d1fd8ebd86b2387aad860eb8047f0053.js"></script>
-                    </li>
-                    <li class="item" data-id="2">
-                        <span class="close-button">X</span>
-                        <script
-                            src="https://gist.github.com/NemanjaDjordan/afd8edc0560fb3bf32fa157b370178b3.js"></script>
-                    </li>
-                </ul>
             </section>
         </main>
 
