--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <span class="text">ChatGPT</span>
                     </p>
 
-                    <div class="bottom-text">
+                    <!-- <div class="bottom-text">
                         <p class="medium-text">
                             <span>" Why guess when you can know?</span>
                             <span>Hire me, and I'll make sure your data gives
@@ -74,7 +74,7 @@
                                 "</span>
                             <span>Me</span>
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
