--- a/index.html
+++ b/index.html
@@ -58,23 +58,19 @@
                 <div class="wrapper">
                     <div class="img-wrap"></div>
 
-                    <p class="top-text">
+                    <!-- <p class="top-text">
                         <span class="quotes quotes-first">"</span>
                         <span class="text">Data analysts: because Excel won't
                             analyze itself.</span>
                         <span class="quotes quotes-second">"</span>
                         <span class="text">ChatGPT</span>
-                    </p>
+                    </p> -->
 
-                    <!-- <div class="bottom-text">
+                    <div class="top-text">
                         <p class="medium-text">
-                            <span>" Why guess when you can know?</span>
-                            <span>Hire me, and I'll make sure your data gives
-                                you all the answers - no crystal ball required.
-                                "</span>
-                            <span>Me</span>
+                            <span>Why guess when you can know? Hire me, and I'll make sure your data gives you all the answers - no crystal ball required.</span>
                         </p>
-                    </div> -->
+                    </div>
                 </div>
             </section>
 
