--- a/index.html
+++ b/index.html
@@ -57,19 +57,8 @@
             <section class="section-about" data-name="about">
                 <div class="wrapper">
                     <div class="img-wrap"></div>
-
-                    <!-- <p class="top-text">
-                        <span class="quotes quotes-first">"</span>
-                        <span class="text">Data analysts: because Excel won't
-                            analyze itself.</span>
-                        <span class="quotes quotes-second">"</span>
-                        <span class="text">ChatGPT</span>
-                    </p> -->
-
                     <div class="top-text">
-                        <p class="medium-text">
-                            <span>Why guess when you can know? Hire me, and I'll make sure your data gives you all the answers - no crystal ball required.</span>
-                        </p>
+                        <p class="medium-text">My name is <span>Nemanja Đordan</span>. I am a straightforward person – I will work for you in exchange for money. Some of the skills that I possess are listed below.</p>
                     </div>
                 </div>
             </section>
