--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="wrapper">
                     <div class="img-wrap"></div>
                     <div class="top-text">
-                        <p class="medium-text">My name is <span>Nemanja Đordan</span>.n exchange for money. Some of the skills that I possess are listed below.</p>
+                        <p class="medium-text">My name is Nemanja Đordan. I am a straightforward person – I will work for you in exchange for money. Some of the skills that I possess are listed below.</p>
                     </div>
                 </div>
             </section>
